--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             Due to security issues and browser limitations. This page cannot perform the functions of this script, 
                 and thus you have to download the script and run it locally on your computer (it's safe).</p>
             
-            <a href="./dropbox_uploader.py" download>
+            <a href="./files/dropbox_uploader.py" download>
                 <input type="button" value="Download Script" />
             </a>
         </div>
